# sapling-crypto

./: Cargo.toml
src/: as_waksman.rs  eddsa.rs  lib.rs
src/alt_babyjubjub/: mod.rs
src/babyjubjub/: mod.rs
src/circuit/: baby_eddsa.rs  mod.rs  num.rs  poseidon_hash.rs
src/circuit/recursive_redshift/: bn256_rescue_sbox.rs  data_structs.rs  fri_utils.rs  fri_verifier.rs  mod.rs  redshift_circuit.rs  redshift_circuit_internals.rs  rescue.rs  tests.rs  upper_layer_combiner.rs
src/circuit/recursive_redshift/channel/: mod.rs  rescue_channel.rs
src/circuit/recursive_redshift/hashes/: bn256_rescue_sbox.rs  mod.rs  rescue.rs
src/circuit/recursive_redshift/oracles/: merklee_proof.rs  mod.rs  rescue_merklee_proof.rs
src/jubjub/: mod.rs
src/poseidon/: bn256.rs  mod.rs
