[package]
authors = ["Sean Bowe <sean@z.cash>", "Alex Vlasov <alex.m.vlasov@gmail.com>"]
description = "Cryptographic library for Zcash Sapling with more content"
documentation = "https://github.com/matter-labs/sapling-crypto"
homepage = "https://github.com/matter-labs/sapling-crypto"
license = "MIT/Apache-2.0"
name = "sapling-crypto_ce"
repository = "https://github.com/matter-labs/sapling-crypto"
version = "0.1.3"
#edition = "2018"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["multicore"]
multicore = ["bellman/multicore"]
nightly = ["bellman/nightly"]
wasm = ["bellman/wasm"]
 
[dependencies]
# rand = "0.4"
# digest = "0.8"
# byteorder = "1"
# tiny-keccak = {version = "2.0", features = ["keccak"] }
# # serde = "1.0"
# # serde_derive = "1.0"
# sha2 = "0.8.0"

#pairing = {package = "pairing_ce", git = "https://github.com/matter-labs/pairing.git", branch = "affine-ops", rev = "af828bd2fb1c83c49fe202a0b2b3cc5d177d4d18" }
bellman = {package = "bellman_ce", path = "C:/Users/Konstantce/Desktop/bellman/bellman"}
#bellman = { package = "bellman_ce", git = "https://github.com/matter-labs/bellman.git", branch = "recursive_plonk" }
#bellman = {package = "bellman_ce", version = "0.3", default-features = false}
#blake2-rfc_bellman_edition = "0.0.1"

[dev-dependencies]
hex-literal = "0.2"

